lots of updates

--- a/public/sandbox/scrollable_tbody.htm
+++ b/public/sandbox/scrollable_tbody.htm
@@ -56,9 +56,15 @@
       border:0;
     }
 
-    table.scrollable tbody {
+    div.right {
+      width:auto;
       height:500px;
-      overflow:auto;
+      overflow-y:auto;
+      position:relative;
+      padding-top:30px;
+    }
+
+    div.right thead {
     }
   </style>
 </head>
