stop being all one-pagey

--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,8 @@
+---
+layout: homepage
+nav: resume
+---
+
 <div id="resume" class="hresume">
   <a href="#mike_busch" class="include contact" title="Mike Busch"></a>
 
@@ -8,4 +13,6 @@
   {% include resume/extras.html %}
   {% include resume/honors_and_certs.html %}
 </div>
+
+{% include contact.html %}
 
