--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,7 @@ nav: resume
   {% include resume/overview.html %}
   {% include resume/experience.html %}
   {% include resume/education.html %}
+  {% include resume/skills.html %}
   {% include resume/extras.html %}
   {% include resume/honors_and_certs.html %}
 </div>
